# instabids-adk-boilerplate

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.a2a/agent_cards/: homeowner_agent.json  outbound_recruiter_agent.json
.a2a/schemas/: events.json
.adk/: components.json  context.json  conventions.json
.github/workflows/: ci.yml  deploy.yml
db/migrations/: 20250501_init.sql  20250515_bid_cards.sql
src/: __init__.py
src/instabids/: __init__.py
src/instabids/a2a_comm/: __init__.py  client.py  events.py
src/instabids/agents/: __init__.py
src/instabids/agents/homeowner/: __init__.py  agent.py  instruction.py
src/instabids/agents/homeowner/tools/: __init__.py  bid_card_tools.py
src/instabids/modules/: __init__.py  bid_card_module.py
src/instabids/sessions/: memory_service.py
src/instabids/tools/: __init__.py  database_tools.py  vision_tools.py
src/instabids/utils/: __init__.py  config.py  logging.py
