[tool.poetry]
name = "instabids"
version = "0.1.0"
description = "Connect homeowners with contractors through AI-assisted project scoping and bidding"
authors = ["InstaBids Team <team@instabids.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-adk = "1.0.0"         # Pin exact version for stability
google-genai = "^1.16.0"     # Using modern SDK (replaces google-generativeai)
fastapi = "^0.110.0"
uvicorn = "^0.30.0"
pydantic = "^2.5.0"
supabase = "^2.4.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
flake8 = "^7.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.flake8]
max-line-length = 100
exclude = [".venv", ".git", "__pycache__", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"